// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots arguments/SeriesStyle simple 1`] = `
<div
  style={
    Object {
      "background": "#fff",
      "padding": "16px",
      "width": "323px",
    }
  }
>
  <div
    className="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive canvasArgSeries__colorPicker"
  >
    <div
      className="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <div
        className="euiText euiText--extraSmall"
      >
        Color
      </div>
    </div>
    <div
      className="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <div
        className="euiText euiText--extraSmall"
      >
        <button
          aria-label="Color: Auto"
          className="euiLink euiLink--primary"
          onClick={[Function]}
          type="button"
        >
          Auto
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots arguments/SeriesStyle/components simple: defaults 1`] = `
<div
  style={
    Object {
      "background": "#fff",
      "padding": "16px",
      "width": "323px",
    }
  }
>
  <div
    className="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive canvasArgSeries__colorPicker"
  >
    <div
      className="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <div
        className="euiText euiText--extraSmall"
      >
        Color
      </div>
    </div>
    <div
      className="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <div
        className="euiText euiText--extraSmall"
      >
        <button
          aria-label="Color: Auto"
          className="euiLink euiLink--primary"
          onClick={[Function]}
          type="button"
        >
          Auto
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots arguments/SeriesStyle/components simple: no labels 1`] = `
<div
  style={
    Object {
      "background": "#fff",
      "padding": "16px",
      "width": "323px",
    }
  }
>
  <div
    className="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive canvasArgSeries__colorPicker"
  >
    <div
      className="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <div
        className="euiText euiText--extraSmall"
      >
        Color
      </div>
    </div>
    <div
      className="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <div
        className="euiText euiText--extraSmall"
      >
        <button
          aria-label="Color: Auto"
          className="euiLink euiLink--primary"
          onClick={[Function]}
          type="button"
        >
          Auto
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots arguments/SeriesStyle/components simple: no series 1`] = `
<div
  style={
    Object {
      "background": "#fff",
      "padding": "16px",
      "width": "323px",
    }
  }
>
  <div
    className="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive canvasArgSeries__colorPicker"
  >
    <div
      className="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <div
        className="euiText euiText--extraSmall"
      >
        Color
      </div>
    </div>
    <div
      className="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <div
        className="euiText euiText--extraSmall"
      >
        <button
          aria-label="Color: Auto"
          className="euiLink euiLink--primary"
          onClick={[Function]}
          type="button"
        >
          Auto
        </button>
      </div>
    </div>
    <div
      className="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <span
        className="euiToolTipAnchor"
        onKeyUp={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        <div
          aria-label="Info"
          color="warning"
          data-euiicon-type="alert"
          onBlur={[Function]}
          onFocus={[Function]}
          tabIndex={0}
        />
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots arguments/SeriesStyle/components simple: with series 1`] = `
<div
  style={
    Object {
      "background": "#fff",
      "padding": "16px",
      "width": "323px",
    }
  }
>
  <div
    className="euiFlexGroup euiFlexGroup--gutterSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive canvasArgSeries__colorPicker"
  >
    <div
      className="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <div
        className="euiText euiText--extraSmall"
      >
        Color
      </div>
    </div>
    <div
      className="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <div
        className="euiText euiText--extraSmall"
      >
        <button
          aria-label="Color: Auto"
          className="euiLink euiLink--primary"
          onClick={[Function]}
          type="button"
        >
          Auto
        </button>
      </div>
    </div>
  </div>
</div>
`;
